wip: build for riscv64

--- a/.github/workflows/webrtc-builds.yml
+++ b/.github/workflows/webrtc-builds.yml
@@ -54,7 +54,11 @@ jobs:
             os: buildjet-8vcpu-ubuntu-2004
             cmd: ./build_linux.sh
             arch: arm64
-
+          - name: linux
+            os: buildjet-8vcpu-ubuntu-2004
+            cmd: ./build_linux.sh
+            arch: riscv64
+            
           - name: android
             os: buildjet-8vcpu-ubuntu-2004
             cmd: ./build_android.sh
